[project]
name = "game-of-thrones-prediction"
version = "0.1.0"
description = "A decision tree model to predict Game of Thrones character survival."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
